--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
     "prettier": "^2.6.2",
+    "prisma": "^3.13.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   }
