--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,10 @@
     "prisma": "^3.13.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "@swc/jest": "^0.2.20",
+    "@types/jest": "^27.5.0",
+    "jest": "^28.0.3"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
