--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -100,7 +100,9 @@
     },
     "exclude": [
         "node_modules",
-        "jest.config.ts"
+        "jest.config.ts",
+        "dist", 
+        "**/*spec.ts"
       ]
   }
   
