--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.68.1",
     "react-native-gesture-handler": "~2.2.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
