--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@gorhom/bottom-sheet": "^4",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "phosphor-react": "^1.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.1",
