--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
