--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@gorhom/bottom-sheet": "^4",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
     "expo-status-bar": "~1.3.0",
     "phosphor-react-native": "^1.1.1",
     "react": "17.0.2",
