--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "~2.2.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.8.0",
+    "react-native-svg": "12.3.0",
     "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.7"
   },
@@ -31,6 +32,9 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39"
   },
   "private": true
 }
