--- a/backend/package.json
+++ b/backend/package.json
@@ -8,18 +8,18 @@
   },
   "devDependencies": {
     "@swc/core": "^1.2.177",
+    "@swc/jest": "^0.2.20",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
+    "jest": "^28.0.3",
     "prettier": "^2.6.2",
     "prisma": "^3.13.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4",
-    "@swc/jest": "^0.2.20",
-    "@types/jest": "^27.5.0",
-    "jest": "^28.0.3"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
