--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "start" : "node dist/server.js",
-    "build" : "tsc"
+    "start": "node dist/server.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "@swc/core": "^1.2.177",
@@ -27,6 +27,7 @@
     "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "swagger-autogen": "^2.21.1"
   }
 }
