--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
-    "swagger-autogen": "^2.21.1"
+    "swagger-autogen": "^2.21.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
