--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^28.0.3",
     "prettier": "^2.6.2",
     "prisma": "^3.13.0",
