--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "swagger:generate": "ts-node-dev src/swagger/generate.ts"
   },
   "devDependencies": {
     "@swc/core": "^1.2.177",
