--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "nodemailer": "^6.7.5",
     "swagger-autogen": "^2.21.1",
     "swagger-ui-express": "^4.3.0"
