--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
+    "express-validator": "^6.14.0",
     "nodemailer": "^6.7.5",
     "swagger-autogen": "^2.21.1",
     "swagger-ui-express": "^4.3.0"
