--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "autocannon": "^7.9.0",
     "jest": "^28.0.3",
@@ -34,6 +35,7 @@
     "express-rate-limit": "^6.4.0",
     "express-validator": "^6.14.0",
     "nodemailer": "^6.7.5",
+    "supertest": "^6.2.3",
     "swagger-autogen": "^2.21.1",
     "swagger-ui-express": "^4.3.0"
   }
