--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start": "node dist/server.js",
     "build": "tsc",
-    "swagger:generate": "ts-node-dev src/swagger/generate.ts"
+    "swagger:generate": "ts-node-dev src/swagger/generate.ts",
+    "test:e2e" : "jest src/tests --detectOpenHandles --coverage=false"
   },
   "devDependencies": {
     "@swc/core": "^1.2.177",
