--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^3.13.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
     "express-validator": "^6.14.0",
