--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,12 @@
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@typescript-eslint/parser": "^5.24.0",
     "autocannon": "^7.9.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^28.0.3",
     "prettier": "^2.6.2",
     "prisma": "^3.13.0",
